[gd_scene load_steps=7 format=3 uid="uid://wva2x2memvp"]

[ext_resource type="Script" uid="uid://dwv3lcjrogtj8" path="res://scripts/RollScore/RollScore.gd" id="1_gakaj"]
[ext_resource type="PackedScene" uid="uid://dbtd6w07pf5p5" path="res://scenes/DiceGridScene.tscn" id="5_25h00"]

[sub_resource type="GDScript" id="GDScript_78gr1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fi7fg"]
size = Vector2(104, 62)
script = SubResource("GDScript_78gr1")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mkgj2"]
size = Vector2(120, 61.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bo5pu"]
bg_color = Color(0, 0, 0, 1)

[node name="RollScore" type="Control" groups=["SceneRoot"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_gakaj")

[node name="DiceGridLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.49999994
anchor_top = 0.012345679
anchor_right = 0.8888889
anchor_bottom = 0.049382716
mouse_filter = 2
text = "Roll Your Dice:"
metadata/_edit_use_anchors_ = true

[node name="DiceGrid" parent="." instance=ExtResource("5_25h00")]
layout_mode = 1
gridType = 1

[node name="ScoreRollUI" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.264
anchor_top = 0.639
anchor_right = 0.768
anchor_bottom = 0.951
offset_left = -0.127991
offset_top = -0.072052
offset_right = 0.263977
offset_bottom = -0.248108
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="MultInfo" type="RichTextLabel" parent="ScoreRollUI"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.302926
anchor_top = 0.009901291
anchor_right = 0.6506024
anchor_bottom = 0.15483233
mouse_filter = 1
text = "extra_info_on_mult"
metadata/_edit_use_anchors_ = true

[node name="SumInfo" type="RichTextLabel" parent="ScoreRollUI"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.068846814
anchor_top = 0.009901287
anchor_right = 0.39070567
anchor_bottom = 0.16419867
mouse_filter = 1
text = "extra_info_on_sum"
metadata/_edit_use_anchors_ = true

[node name="RollResultGrid" type="GridContainer" parent="ScoreRollUI"]
visible = false
layout_direction = 2
layout_mode = 1
anchors_preset = -1
anchor_left = -0.13769363
anchor_top = 0.16831715
anchor_right = 0.74354553
anchor_bottom = 0.48514894
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 2
mouse_filter = 2
mouse_force_pass_scroll_events = false
columns = 6
metadata/_edit_use_anchors_ = true

[node name="RollResultLabel" type="RichTextLabel" parent="ScoreRollUI/RollResultGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Roll Result: "

[node name="RollSum" type="RichTextLabel" parent="ScoreRollUI/RollResultGrid"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
text = "1234"

[node name="SumInfoArea" type="Area2D" parent="ScoreRollUI/RollResultGrid/RollSum"]
z_index = 1
position = Vector2(59, 40)

[node name="SumCollisionShape2D" type="CollisionShape2D" parent="ScoreRollUI/RollResultGrid/RollSum/SumInfoArea"]
visible = false
position = Vector2(-8, -7)
shape = SubResource("RectangleShape2D_fi7fg")

[node name="RollMult" type="RichTextLabel" parent="ScoreRollUI/RollResultGrid"]
custom_minimum_size = Vector2(12, 0)
layout_mode = 2
size_flags_vertical = 3
text = "x"

[node name="RollMultValue" type="RichTextLabel" parent="ScoreRollUI/RollResultGrid"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
text = "4321"

[node name="MultInfoArea" type="Area2D" parent="ScoreRollUI/RollResultGrid/RollMultValue"]
z_index = 1
position = Vector2(57, 42)

[node name="MultCollisionShape2D" type="CollisionShape2D" parent="ScoreRollUI/RollResultGrid/RollMultValue/MultInfoArea"]
visible = false
position = Vector2(1, -8.75)
shape = SubResource("RectangleShape2D_mkgj2")

[node name="=" type="RichTextLabel" parent="ScoreRollUI/RollResultGrid"]
custom_minimum_size = Vector2(12, 0)
layout_mode = 2
size_flags_vertical = 3
text = "="

[node name="RollResult" type="RichTextLabel" parent="ScoreRollUI/RollResultGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "final_result"

[node name="InfoPanel" type="Panel" parent="ScoreRollUI"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = -0.13769363
anchor_top = 0.48514897
anchor_right = 0.68846816
anchor_bottom = 1.0000006
metadata/_edit_use_anchors_ = true

[node name="SumInfo" type="HBoxContainer" parent="ScoreRollUI/InfoPanel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MultInfo" type="HBoxContainer" parent="ScoreRollUI/InfoPanel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Instructions" type="RichTextLabel" parent="ScoreRollUI/InfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Hover over score and multiplier result numbers to check rolled dice values"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RollButton" type="Button" parent="ScoreRollUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.798623
anchor_top = 0.32673302
anchor_right = 1.2392426
anchor_bottom = 1.0000007
offset_bottom = 1.5258789e-05
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Roll"
metadata/_edit_use_anchors_ = true

[node name="Continue" type="Button" parent="ScoreRollUI"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.7986231
anchor_top = 0.32673308
anchor_right = 1.2392427
anchor_bottom = 1.0000006
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Continue"
metadata/_edit_use_anchors_ = true

[node name="GoalControl" type="Control" parent="."]
anchors_preset = 0
anchor_left = 0.027777778
anchor_top = 0.6419753
anchor_right = 0.2777778
anchor_bottom = 0.7407407
offset_top = 3.0517578e-05
offset_bottom = 3.0517578e-05
metadata/_edit_use_anchors_ = true

[node name="GoalLabel" type="RichTextLabel" parent="GoalControl"]
layout_mode = 0
anchor_top = 0.125
anchor_right = 0.33333334
anchor_bottom = 0.875
theme_override_font_sizes/normal_font_size = 32
text = "Goal:"
metadata/_edit_use_anchors_ = true

[node name="GoalValue" type="RichTextLabel" parent="GoalControl"]
layout_mode = 0
anchor_left = 0.33333334
anchor_top = 0.125
anchor_right = 1.0
anchor_bottom = 0.875
theme_override_font_sizes/normal_font_size = 32
text = "1"
metadata/_edit_use_anchors_ = true

[node name="GameOver" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.22222222
anchor_top = 0.16049382
anchor_right = 0.7777778
anchor_bottom = 0.5308642
theme_override_styles/panel = SubResource("StyleBoxFlat_bo5pu")
metadata/_edit_use_anchors_ = true

[node name="GameOverText" type="RichTextLabel" parent="GameOver"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_font_sizes/normal_font_size = 72
text = "GAME OVER
Goal Not Met"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="RollScoreInfo" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 512.0
offset_right = 512.0
offset_bottom = 576.0
text = "Roll your Score Dice and beat the Goal!"

[connection signal="mouse_entered" from="ScoreRollUI/RollResultGrid/RollSum/SumInfoArea" to="." method="_on_sum_info_area_mouse_entered"]
[connection signal="mouse_exited" from="ScoreRollUI/RollResultGrid/RollSum/SumInfoArea" to="." method="_on_sum_info_area_mouse_exited"]
[connection signal="mouse_entered" from="ScoreRollUI/RollResultGrid/RollMultValue/MultInfoArea" to="." method="_on_mult_info_area_mouse_entered"]
[connection signal="mouse_exited" from="ScoreRollUI/RollResultGrid/RollMultValue/MultInfoArea" to="." method="_on_mult_info_area_mouse_exited"]
[connection signal="pressed" from="ScoreRollUI/RollButton" to="." method="_on_roll_button_pressed"]
[connection signal="pressed" from="ScoreRollUI/Continue" to="." method="_on_continue_pressed"]
